--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
+  cloud_firestore: ^3.4.4
+  firebase_core: ^1.20.1
 
 dev_dependencies:
   flutter_test:
